build/vpc.tf
// AWS  Fortimanager VPC
resource "aws_vpc" "fmgvm-vpc" {
  cidr_block           = var.vpccidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  instance_tenancy     = "default"
  tags = {
    Name = "fortimanager"
  }
}

resource "aws_subnet" "publicsubnetaz1" {
  vpc_id            = aws_vpc.fmgvm-vpc.id
  cidr_block        = var.publiccidraz1
  availability_zone = var.az1
  tags = {
    Name = "public subnet az1"
  }
}

# resource "aws_subnet" "privatesubnetaz1" {
#   vpc_id            = aws_vpc.fgtvm-vpc.id
#   cidr_block        = var.privatecidraz1
#   availability_zone = var.az1
#   tags = {
#     Name = "private subnet az1"
#   }
# }
